fix: spacing for the idk'th time

--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -30,6 +30,7 @@ hr {
 
 b {
   color: var(--col-secondary);
+  margin-left: 1.5%;
 }
 
 a {
